--- a/TODO
+++ b/TODO
@@ -3,13 +3,14 @@ atom.py
 define_atom('gender', ...) in application, not in framework
 genders = ['?', 'v', 'm'] must be I18N
 define_atom('boolean', ...) also I18N
+MINYEAR = 1400 (not midnight) to avoid complaints from RethinkDB
 
 config.py
 ---------
 * I18N the right way
   - http://inventwithpython.com/blog/2014/12/20/translate-your-python-3-program-with-the-gettext-module/
   - https://flufli18n.readthedocs.io/en/latest/docs/using.html
-  -  http://pylonsbook.com/en/1.1/internationalization-and-localization.html
+  - http://pylonsbook.com/en/1.1/internationalization-and-localization.html
 
 model.py
 --------
@@ -44,17 +45,20 @@ view.py
 * add 'import' method (form-based file upload, CSV and JSON)
 * make ItemView.sort independent from db engine
 * pass ItemView.sort to render tree methods in a more elegant way
+* itemlist with clickable column headers to influence sorting
 * define icon and label for custom methods
 * Use Mirage (JS) for client-side generation of search queries
-* add boolean vector 'active' to the render tree (add_item, add_items)
 * add 'title' attribute to render tree, let routes fill this; apply in templates
-* boolean vectors in itemlist: active (default), recently modified (with event handler)
+* add boolean vector 'active', 'modified' recently) to the render tree (add_item, add_items)
+* boolean vector 'modified' could be part of event handler
 
 engine/mongodb.py
 -----------------
 * make database connection thread-safe
+* datetime objects *with* timezone
 * text index via Collection.ensureIndex({'author': 'text', 'content': 'text'})
 
 engine/rethinkdb.py
 -------------------
-not started yet
+* datetime objects *with* timezone
+* text index via ...
