--- a/TODO
+++ b/TODO
@@ -44,6 +44,7 @@ view.py
 * I18N of setting.labels and messages
 * authorization determines icon and button states (enabled, disabled)
 * delete button is enabled iff item.active
+* collection_buttons_extra: where to set them?
 * add 'import' method (form-based file upload, CSV and JSON)
 * make ItemView.sort independent from db engine
 * make Itemview.prune configurable (Itemview.clip(), 2 modes)
