fixed error in view.py; API change for better support of JS applications

--- a/CHANGELOG.mkd
+++ b/CHANGELOG.mkd
@@ -1,3 +1,19 @@
+Version 0.9
+-----------
+
+### Features
+-   API changes: 'info' field of render tree is now called 'computed' (as in Vue);
+    SwitchRouter is now called CondRouter and has more flexible interface;
+    icon classes must be set in configuration file
+-   Updated README and manual
+
+Version 0.8
+-----------
+
+### Features
+-   ...
+-   Updated README and manual
+
 Version 0.7
 -----------
 
