--- a/TODO
+++ b/TODO
@@ -1,3 +1,11 @@
+general
+-------
+add file 'requirements.txt' (minimum: pip, wheel, twine)
+publish on PyPI with twine
+pip install -r requirements.txt
+python setup.py sdist bdist_wheel
+twine upload --repository-url https://...
+
 atom.py
 -------
 genders = ['?', 'v', 'm'] must be I18N
