--- a/CHANGELOG.mkd
+++ b/CHANGELOG.mkd
@@ -1,3 +1,9 @@
+Version 0.11
+------------
+
+### Features
+- API changes: completely new convert/display approach; improved button handling
+
 Version 0.10
 ------------
 
