moved to version 0.11

--- a/README.mkd
+++ b/README.mkd
@@ -30,6 +30,9 @@ For development Mercurial is needed as well.
 - *Chameleon*
 - either *MongoDB* (with *PyMongo*) or *RethinkDB*
 
+#### Optional
+- jsondiff
+
 About
 -----
 
