--- a/CHANGELOG.mkd
+++ b/CHANGELOG.mkd
@@ -1,3 +1,10 @@
+Version 0.12
+------------
+
+### Features
+- new module 'coma' added: COvert's Mustache Analog, a template engine
+ - API change: template rendering without 'this' parameter
+
 Version 0.11
 ------------
 
@@ -5,6 +12,8 @@ Version 0.11
 - API change: completely new convert/display approach
 - API change: improved button handling
 - API change: several setting parameters were renamed
+- API change: template handling is made more generic with template
+  loaders; templates are now callable objects 
 
 Version 0.10
 ------------
